[package]
name = "pokemon-engine"
version = "0.1.0"
edition = "2021"
description = "Game reward engine library for PokeWorld $POKE token with Solana integration"
license = "MIT"
authors = ["PokeWorld Team"]

[lib]
name = "pokemon_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Solana dependencies (2025 compatible versions)
solana-sdk = "2.0"
solana-client = "2.0"
solana-program = "2.0"
spl-token = "5.0"
spl-associated-token-account = "5.0"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bs58 = "0.5"

# Storage (optional, bisa pakai in-memory atau database)
sled = "0.34"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
wasm = ["wasm-bindgen", "web-sys"]
solana-integration = []

[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
  "console",
  "Window",
]
